# $Id$

2008-02-01	Ivan Y. Khvostishkov

	* main/Net/Mail/Mail.class.php: setSendmailArgs(): used for setting 5th
	argument for mail() function.

2008-01-21	Denis M. Gabaidulin

	* core/Base/Assert.class.php: isNotFalse().

	* main/Utils/IO/FileOutputStream.class.php: now throws IOException,
	if stream file resource does not exist.

2008-01-21	Konstantin V. Arkhipov

	* 0.10.9 released.

2008-01-10	Konstantin V. Arkhipov

	* meta/: configurations without classes are now allowed;
	includes processing now goes before classes.

2008-01-08	Konstantin V. Arkhipov

	* meta/classes/MetaConfiguration.class.php: validation against
	meta.dtd implemented.

	* core/Cache/FileLocker.class.php: added forgotten file dropping in
	drop().

2008-01-07	Konstantin V. Arkhipov

	* main/DAOs/Workers/: getResult() fixed.

	* main/DAOs/Workers/NullDaoWorker.class.php: getListByIds() now
	behaves like in all others DAO workers.

	* main/Utils/ClassUtils.class.php: isClassImplements implemented, to
	avoid SPL's class_implements dependency.

2007-12-27	Vladimir A. Altuchov

	* main/Markup/Feed/: Category attribute added.

2007-12-25	Konstantin V. Arkhipov

	* global.inc.php.tpl: ONPHP_TEMP_PATH now defaults to
	sys_get_temp_dir(), ONPHP_CLASS_CACHE now defaults to ONPHP_TEMP_PATH.

2007-12-20	Dmitry E. Demidov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added
	method viewExists.

2007-12-18	Dmitry E. Demidov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added
	method addFirstPrefix.

2007-12-11	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveString.class.php: change
	mail pattern of local-part wrt RFC2822.

2007-12-11	Dmitry E. Pismenny

	* main/Base/RequestType.class.php: added server type.

2007-12-09	Konstantin V. Arkhipov

	* 0.10.8 released.

2007-12-05	Anton E. Lebedevich

	* main/Crypto/, main/Math/, main/OpenId/: OpenId implementation moved
	from incubator to main tree.

2007-11-27	Denis M. Gabaidulin
