@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2006-2007 by Konstantin V. Arkhipov                     *
+ *   Copyright (C) 2006-2008 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -31,16 +31,16 @@
 			$watermark = "Single onPHP's project"
 		)
 		{
-			return new self($peer, $watermark);
+			return new self($peer, $watermark.' ['.ONPHP_VERSION.']');
 		}
-
+		
 		public function __construct(
 			CachePeer $peer,
 			$watermark = "Single onPHP's project"
 		)
 		{
 			$this->peer = $peer;
-			$this->setWatermark($watermark);
+			$this->setWatermark($watermark.' ['.ONPHP_VERSION.']');
 		}
 		
 		public function setWatermark($watermark)
@@ -117,7 +117,7 @@
 		{
 			return $this->peer->isAlive();
 		}
-
+		
 		protected function store(
 			$action, $key, &$value, $expires = Cache::EXPIRES_MEDIUM
 		)
